--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "node-sass styles/ -o assets/css/", 
+    "watch": "node-sass styles/ -o assets/css/ -w",
     "server": "node server.js",
     "rfid": "node rfid.js"
   },
