--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "node-sass styles/ -o assets/css/", 
+    "build": "node-sass styles/ -o assets/css/",
     "watch": "node-sass styles/ -o assets/css/ -w",
     "server": "node server.js",
     "rfid": "node rfid.js"
@@ -12,8 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "express.io": "^1.1.13",
+    "install": "^0.8.2",
+    "lodash": "^4.17.2",
     "node-sass": "^3.13.0",
+    "npm": "^4.0.2",
     "pug": "^2.0.0-beta6"
   }
 }
